fixed refresh button

--- a/src/view.html
+++ b/src/view.html
@@ -1,6 +1,6 @@
 <div class="row">
   <span class="pull-right" style="padding-right:10px;">
-    <a href title="Refresh logs" ng-click="refreshLogs()">
+    <a href="#" title="Refresh logs" ng-click="refreshLogs()">
       <i class="glyphicon glyphicon-refresh"></i>
     </a>
   </span>
